--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
-{
+  {
     "name": "goit-markup-final-project",
     "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0",
     "type": "module",
-    "homepage": "https://yangicher.github.io/goit-markup-final-project",
     "scripts": {
-      "dev": "vite",
+      "dev": "vite --open",
       "build": "vite build --base=/goit-markup-final-project/",
       "preview": "vite preview"
     },
     "devDependencies": {
-      "glob": "^8.1.0",
-      "vite": "^4.5.2"
+      "glob": "^11.0.0",
+      "postcss": "^8.4.41",
+      "postcss-sort-media-queries": "^5.2.0",
+      "vite": "^5.4.6"
     },
     "license": "ISC",
     "dependencies": {
-      "swiper": "^11.1.1",
-      "vite-plugin-full-reload": "^1.0.5",
-      "vite-plugin-html-inject": "^1.0.1"
+      "vite-plugin-full-reload": "^1.2.0",
+      "vite-plugin-html-inject": "^1.1.2"
     }
   }
