--- a/package.json
+++ b/package.json
@@ -1,26 +1,70 @@
 {
-    "name": "goit-markup-final-project",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "homepage": "https://yangicher.github.io/goit-markup-final-project",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build --base=/goit-markup-final-project/",
-        "preview": "vite preview",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d src"
-    },
-    "devDependencies": {
-        "gh-pages": "^6.3.0",
-        "postcss-sort-media-queries": "^5.2.0",
-        "vite": "^6.2.2"
-    },
-    "license": "ISC",
-    "dependencies": {
-        "glob": "^11.0.1",
-        "swiper": "^11.1.1",
-        "vite-plugin-full-reload": "^1.0.5",
-        "vite-plugin-html-inject": "^1.0.1"
-    }
+  "name": "goit-markup-final-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "homepage": "https://yangicher.github.io/goit-markup-final-project",
+  "scripts": {
+    "deploy": "gh-pages -d src"
+  },
+  "license": "ISC",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "dependencies": {
+    "array-union": "^2.1.0",
+    "async": "^3.2.6",
+    "braces": "^3.0.3",
+    "commander": "^13.1.0",
+    "commondir": "^1.0.1",
+    "dir-glob": "^3.0.1",
+    "email-addresses": "^5.0.0",
+    "escape-string-regexp": "^1.0.5",
+    "fast-glob": "^3.3.3",
+    "fastq": "^1.19.1",
+    "filename-reserved-regex": "^2.0.0",
+    "filenamify": "^4.3.0",
+    "fill-range": "^7.1.1",
+    "find-cache-dir": "^3.3.2",
+    "find-up": "^4.1.0",
+    "glob-parent": "^5.1.2",
+    "globby": "^11.1.0",
+    "graceful-fs": "^4.2.11",
+    "ignore": "^5.3.2",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "jsonfile": "^6.1.0",
+    "locate-path": "^5.0.0",
+    "make-dir": "^3.1.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.8",
+    "p-limit": "^2.3.0",
+    "p-locate": "^4.1.0",
+    "p-try": "^2.2.0",
+    "path-exists": "^4.0.0",
+    "path-type": "^4.0.0",
+    "picomatch": "^2.3.1",
+    "pkg-dir": "^4.2.0",
+    "queue-microtask": "^1.2.3",
+    "reusify": "^1.1.0",
+    "run-parallel": "^1.2.0",
+    "semver": "^6.3.1",
+    "slash": "^3.0.0",
+    "strip-outer": "^1.0.1",
+    "to-regex-range": "^5.0.1",
+    "trim-repeated": "^1.0.0",
+    "universalify": "^2.0.1",
+    "vite-plugin-full-reload": "^1.2.0",
+    "vite-plugin-html-inject": "^1.1.2"
+  },
+  "description": "",
+  "devDependencies": {
+    "glob": "^11.0.0",
+    "postcss": "^8.4.41",
+    "postcss-sort-media-queries": "^5.2.0",
+    "vite": "^5.4.6",
+    "fs-extra": "^11.3.0",
+    "gh-pages": "^6.3.0"
+  }
 }
