--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "fs-extra": "^11.3.0",
     "gh-pages": "^6.3.0"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "gh": "^2.8.9"
+  }
 }
