--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "homepage": "https://yangicher.github.io/goit-markup-final-project",
   "scripts": {
+    "build": "vite build --base=/goit-markup-final-project/",
     "deploy": "gh-pages -d src --repo https://github.com/yangicher/goit-markup-final-project.git"
   },
   "license": "ISC",
@@ -13,7 +14,8 @@
   "author": "siangicher <sergey.yangicher@gmail.com>",
   "devDependencies": {
     "fs-extra": "^11.3.0",
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "vite": "^6.2.2"
   },
   "description": "",
   "dependencies": {
