--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "fs-extra": "^11.3.0",
     "gh-pages": "^6.3.0",
     "glob": "^11.0.1",
-    "vite": "^6.2.2"
+    "postcss-sort-media-queries": "^5.2.0",
+    "vite": "^6.2.2",
+    "vite-plugin-full-reload": "^1.2.0",
+    "vite-plugin-html-inject": "^1.1.2"
   },
   "description": "",
   "dependencies": {
