--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "homepage": "https://yangicher.github.io/goit-markup-final-project",
   "scripts": {
+    "dev": "vite",
     "build": "vite build --base=/goit-markup-final-project/",
     "deploy": "gh-pages -d src --repo https://github.com/yangicher/goit-markup-final-project.git"
   },
@@ -16,6 +17,7 @@
     "fs-extra": "^11.3.0",
     "gh-pages": "^6.3.0",
     "glob": "^11.0.1",
+    "postcss": "^8.4.41",
     "postcss-sort-media-queries": "^5.2.0",
     "vite": "^6.2.2",
     "vite-plugin-full-reload": "^1.2.0",
