--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "glob": "^11.0.1",
     "postcss": "^8.4.41",
     "postcss-sort-media-queries": "^5.2.0",
+    "prettier": "3.5.3",
     "vite": "^6.2.2",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
