--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,11 @@
 {
-  "tabWidth": 4
+  "printWidth": 80,
+  "tabWidth": 4,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": true,
+  "quoteProps": "consistent",
+  "trailingComma": "none",
+  "arrowParens": "always",
+  "htmlWhitespaceSensitivity": "ignore"
 }
